# DrinkingData

./: .gitignore  CLAUDE.md  DrinkingData (2).tex  README.md  TexasWaterAnalysis.py  TexasWaterPanelRegression.py  TexasWaterVisualization.py  WaterAnalysis.py  ai_datacenter_water_stress_analysis_charts.py  ai_datacenter_water_stress_focused_map.py  config.example.yaml  create_proper_us_map.py  create_realistic_water_map.py  create_water_overlay_map.py  pyproject.toml  requirements.txt  us_map_with_states.py  waterPreliminAnalysis.py  water_depletion_map_with_boundaries.py  water_stress_analysis_gdb.py  water_stress_datacenter_analysis.py  water_stress_map_overlay.py  water_stress_professional_map.py
drinkingdata/: __init__.py  cli.py  config.py  robustness.py  techno_economic.py
drinkingdata/estimation/: __init__.py  did.py  eventstudy.py  impacts.py  spatial_did.py
drinkingdata/indirect/: __init__.py  water.py
drinkingdata/spatial/: __init__.py  units.py  weights.py
drinkingdata/viz/: __init__.py
tests/: test_config.py  test_impacts.py  test_indirect_water.py  test_panel.py  test_providers.py  test_techno_economic.py  test_weights.py
